--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28607,10 +28607,16 @@ img {
 .nk-invoice-head + .nk-invoice-head {
   border-top: 1px solid #e8e7ec;
   padding-top: 30px;
+  max-width: 60%;
 }
 .nk-invoice-head ul li {
   font-size: 0.875rem;
   color: #787c9e;
+}
+@media only screen and (min-width: 1000px) {
+  .nk-invoice-contract {
+      max-width: 60% !important;
+  }
 }
 .nk-invoice-table th,
 .nk-invoice-table td {
